# movey-webapp

./: .env.example  .gitignore  .test-env  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  RustConfig  compile_scss  diesel.toml  docker-compose.yml
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: compile.yaml  lint-format.yaml  test.yaml
docs/: GUIDES.md  JELLY_FEATURES.md  MOVE_DEVELOPER.md
email_templates/: layout.html  odd-registration-attempt.html  password-was-reset.html  verify-account.html  welcome.html
jelly/: Cargo.toml
jelly/src/: database.rs  email.rs  error.rs  i18n.rs  jobs.rs  lib.rs  prelude.rs  server.rs  templates.rs  utils.rs
jelly/src/accounts/: mod.rs  password.rs  token_generator.rs
jelly/src/email/: common.rs  local.rs  mod.rs  postmark.rs  sendgrid.rs  smtp.rs
jelly/src/forms/: booly.rs  date.rs  email.rs  mod.rs  password.rs  slug.rs  text.rs
jelly/src/guards/: auth.rs  mod.rs
jelly/src/request/: auth.rs  database.rs  flash.rs  jobs.rs  mod.rs  request.rs
jelly/src/utils/: api_errors.rs  error_constants.rs  mod.rs
jelly/tests/: mail.rs
migrations/: 20201104205425_users.sql
migrations/20201104205425_accounts/: up.sql
migrations/2022-04-04-075309_create_packages/: down.sql  up.sql
migrations/2022-04-04-075749_create_package_versions/: down.sql  up.sql
migrations/2022-04-12-014626_change_packages_and_package_versions_updated_to_updated_at/: down.sql  up.sql
migrations/2022-04-15-032056_add_rev_to_package_versions/: down.sql  up.sql
migrations/2022-04-19-031532_add_tsv_column_to_packages/: down.sql  up.sql
migrations/2022-04-19-034806_add_function_and_trigger_to_update_tsv_packages/: down.sql  up.sql
migrations/2022-04-22-022410_add_total_file/: down.sql  up.sql
migrations/2022-05-17-030633_set_not_null_for_packages_tsv_column/: down.sql  up.sql
migrations/2022-05-23-100322_add_api_tokens_table/: down.sql  up.sql
migrations/2022-06-01-025343_add_account_to_package/: down.sql  up.sql
migrations/2022-06-07-024535_add_github_login_to_accounts_table/: down.sql  up.sql
migrations/2022-06-15-084819_add_github_id_column_to_accounts/: down.sql  up.sql
migrations/2022-06-22-044222_add_non_empty_constraint_to_package_name/: down.sql  up.sql
migrations/2022-06-22-091145_add_non_empty_constraint_to_package_version/: down.sql  up.sql
migrations/2022-06-29-020245_add_account_id_foreign_key_to_packages/: down.sql  up.sql
migrations/2022-07-20-075320_create_package_collaborators/: down.sql  up.sql
migrations/2022-07-29-104138_create_owner_invitation_table/: down.sql  up.sql
migrations/2022-08-01-074819_add_user_avatar/: down.sql  up.sql
migrations/2022-08-01-085432_create_external_invitations_table/: down.sql  up.sql
migrations/2022-08-01-085432_create_pending_invitations_table/: down.sql  up.sql
migrations/2022-08-08-025657_update_null_avatar_field/: down.sql  up.sql
migrations/2022-08-08-083413_update_github_avatar/: down.sql  up.sql
migrations/2022-08-10-072902_add_account_slug_to_accounts/: down.sql  up.sql
migrations/2022-08-24-062632_migrate_account_id_column/: down.sql  up.sql
migrations/2022-08-26-093452_add_index_to_account_slug/: down.sql  up.sql
migrations/2022-09-14-083026_add_slug_to_packages/: down.sql  up.sql
migrations/2022-09-14-095112_drop_name_unique_constraint/: down.sql  up.sql
migrations/2022-09-21-034407_add_index_to_package_slug/: down.sql  up.sql
migrations/2022-09-22-181310_add_stars_and_forks_to_packages/: down.sql  up.sql
migrations/20220401090837_add_non_empty_constraint_to_email/: down.sql  up.sql
seeds/2022-08-11-034941_account_seeds/: down.sql  up.sql
seeds/2022-08-11-035004_package_seeds/: down.sql  up.sql
seeds/2022-08-11-094055_package_owners/: down.sql  up.sql
seeds/2022-08-11-094123_package_versions/: down.sql  up.sql
seeds/2022-09-12-025104_update-gravatar/: up.sql
src/: constants.rs  github_service.rs  lib.rs  main.rs  pages.rs  request.rs  schema.rs  sql.rs  test.rs
static/: footer.js  header.js
templates/: 400.html  404.html  500.html  503.html  footer.html  github_missing_email.html  header.html  header_dark.html  header_dark_logged_in.html  home.html  index.html  layout.html  layout_dark.html  layout_without_header.html
tests/: integration_tests.rs  templates.rs
(+311 files in other folders)
