[package]
name = "movey_app"
version = "0.1.0"
authors = ["East Agile"]
edition = "2018"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-rt = "*"
base64-url = "1.4.8"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
jelly = { path = "jelly", features = ["email-local"] }
lazy_static = "1.4.0"
log = "*"
mockall_double = "0.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1" }
serde_json = "1.0.79"
toml = "0.5.8"
oauth2 = "4.1"

[features]
default = ["jelly/template_watcher", "jelly/static"]
production = ["jelly/production", "jelly/email-sendgrid"]
test = ["jelly/test"]

[dev-dependencies]
anyhow = "1.0.42"
async-trait = "0.1.52"
cucumber = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
mockall = "0.11.0"
test-log = "0.2.8"
thirtyfour = "0.28.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "time"] }
regex = "1.5.5"

[[test]]
name = "integration_tests"
harness = false
