[package]
name = "jelly"
version = "0.1.0"
authors = ["Ryan McGrath <ryan@secretkeys.io>"]
edition = "2018"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[dependencies]
actix-files = { version = "0.4", optional = true }
actix-service = "1.0.5"
actix-session = "0.4.0"
actix-web = "3"
actix-rt = "1"
anyhow = "1.0"
async-trait = "0.1.24"
background-jobs = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
constant_time_eq = "0.1.5"
djangohashers = { version = "1.3.2", default-features = false, features = ["with_pbkdf2"] }
dotenv = "0.15.0"
env_logger = { version = "0.8.1", default-features = false, features = ["termcolor", "atty", "humantime"] }
futures = "0.3"
hmac = "0.10.1"
log = "0.4"
minreq = { version = "2.1.0", features = ["https", "json-using-serde"] }
notify = { version = "4", optional = true }
pretty_env_logger = "0.4"
radix = "0.6"
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "json"] }
tera = "1.5"
validator = "0.11"
zxcvbn = "2.0.1"
lettre = { version="0.10.0-rc.3", optional = true }

[features]
default = [ ]
email-smtp = [ "lettre" ]
email-postmark = [ ]
email-sendgrid = [ ]
static = ["actix-files"]
template_watcher = ["notify"]
production = ["actix-web/secure-cookies", "djangohashers/pbkdf2"]
